libpng warning: iCCP: known incorrect sRGB profile #40818

Closed
opened 2014-06-26 21:58:34 +02:00 by Riccardo Giovanetti · 10 comments

System Information
CPU i7 720Q, 8GB RAM, GeForce GTS 360M 1G VRAM, Win7 Pro 64bit

Blender Version
Broken: Blender 2.71.0 (Hash: 9337574) Windows 64bit (blender-2.71-windows64.zip)
Worked: Blender 2.70a (Hash: f93bc76) Windows 64bit (blender-2.70a-windows64.zip)

Short description of error
This warning message is being displayed in the Blender console:

"libpng warning: iCCP: known incorrect sRGB profile"

Exact steps for others to reproduce the error

Blender is installed from the packed .zip distribution into its own dedicated directory together with the following folders added under the \2.71 directory to keep a clean environment: \autosave; \cache; \config; \temp

At first startup of a fresh installation as described above the libpng warning shows up in the console. The following is the output of the Windows command line running blender.exe with the debug flag:

D:\Blender\blender-2.71-windows64>blender.exe --debug
Switching to fully guarded memory allocator.
Blender 2.71 (sub 0)
Build: 2014-06-25 22:33:12 Windows:32bit Release
argv- [x] = blender.exe
argv- [x] = --debug

Note: No (valid) 'D:\Blender\blender-2.71-windows64\2.71\config\startup.blend' f
ound, fall back to built-in default.

read file

Version 267 sub 1 date 1970-01-01 00:00 hash

ordered
OBCube
OBLamp
OBCamera
found bundled python: D:\Blender\blender-2.71-windows64\2.71\python
read file

Version 262 sub 3 date 1970-01-01 00:00 hash

read file

Version 268 sub 5 date 1970-01-01 00:00 hash

libpng warning: iCCP: known incorrect sRGB profile

Presumably its just an unharmful warning message but I though it was appropriate to let you know.

Thanks for your attention.

**System Information** CPU i7 720Q, 8GB RAM, GeForce GTS 360M 1G VRAM, Win7 Pro 64bit **Blender Version** Broken: Blender 2.71.0 (Hash: 9337574) Windows 64bit (blender-2.71-windows64.zip) Worked: Blender 2.70a (Hash: f93bc76) Windows 64bit (blender-2.70a-windows64.zip) **Short description of error** This warning message is being displayed in the Blender console: "libpng warning: iCCP: known incorrect sRGB profile" **Exact steps for others to reproduce the error** Blender is installed from the packed .zip distribution into its own dedicated directory together with the following folders added under the \2.71 directory to keep a clean environment: \autosave; \cache; \config; \temp At first startup of a fresh installation as described above the libpng warning shows up in the console. The following is the output of the Windows command line running blender.exe with the debug flag: D:\Blender\blender-2.71-windows64>blender.exe --debug Switching to fully guarded memory allocator. Blender 2.71 (sub 0) Build: 2014-06-25 22:33:12 Windows:32bit Release argv- [x] = blender.exe argv- [x] = --debug Note: No (valid) 'D:\Blender\blender-2.71-windows64\2.71\config\startup.blend' f ound, fall back to built-in default. read file ``` Version 267 sub 1 date 1970-01-01 00:00 hash ``` ordered OBCube OBLamp OBCamera found bundled python: D:\Blender\blender-2.71-windows64\2.71\python read file ``` Version 262 sub 3 date 1970-01-01 00:00 hash ``` read file ``` Version 268 sub 5 date 1970-01-01 00:00 hash ``` libpng warning: iCCP: known incorrect sRGB profile Presumably its just an unharmful warning message but I though it was appropriate to let you know. Thanks for your attention.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Harvester

Added subscriber: @Harvester
Martijn Berger was assigned by Sergey Sharybin 2014-06-27 10:29:08 +02:00

Added subscribers: @MartijnBerger, @Sergey

Added subscribers: @MartijnBerger, @Sergey

@MartijnBerger, mind having a look?

@MartijnBerger, mind having a look?
Member

This is a known libpng problem, it seems newer versions are super strict and complain a lot. A quick google will show that a LOT of other people have this and that technically libpng is right to complain as there seem to be heaps of technically spec violating png's out there.

I do not really think we should downgrade libpng to get rid of this ?

This is a known libpng problem, it seems newer versions are super strict and complain a lot. A quick google will show that a *LOT* of other people have this and that technically libpng is right to complain as there seem to be heaps of technically spec violating png's out there. I do not really think we should downgrade libpng to get rid of this ?

@MartijnBerger, it it's just a harmless warning guess we could just ignore this. Or try suppressing the warning prints. Or re-save our icon files.

@MartijnBerger, it it's just a harmless warning guess we could just ignore this. Or try suppressing the warning prints. Or re-save our icon files.
Martijn Berger was unassigned by Sergey Sharybin 2014-06-27 11:19:18 +02:00
Sergey Sharybin self-assigned this 2014-06-27 11:19:18 +02:00

Also, we might drop ICCP header i guess.

Re-assigning to self, since possible solutions are all about code, not build environment setup or so.

Also, we might drop ICCP header i guess. Re-assigning to self, since _possible_ solutions are all about code, not build environment setup or so.

This issue was referenced by e919a37e97

This issue was referenced by e919a37e97874d2e7b5abc134eab7ed43c993b18

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e919a37e97.

Closed by commit e919a37e97.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40818
No description provided.