Fix T40818: libpng warning: iCCP: known incorrect sRGB profile

Suppress warning for now, it's harmless and only happens
with new libpng.

In the future we might try enabling it for non-datatoc-ed
files, but it's really not worth spending lots of time on.